--- a/style.scss
+++ b/style.scss
@@ -36,6 +36,126 @@ body {
     position: relative;
     backdrop-filter: blur(15px);
     border: 2px solid #ffffff40;
+    padding: 3rem 5rem;
     flex-direction: column;
     gap: 40px;
+
+
+    @media screen and (max-width: 768px) {
+        width: auto;
+    }
+
+    &__img img{
+        margin: auto;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        object-fit: cover;
+        display: block;
+        box-shadow: 0 10px 60px -10px rgba(13, 28, 39, .5);
+    }
+
+    &__desc {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+
+        h1{
+            font-size: 2.5rem;
+            font-weight: bold;
+
+            & + div{
+                font-size: 20px;
+            }
+        }
+    }
+
+    &__info{
+        display: flex;
+        justify-content: center;
+        gap: 50px;  
+
+        @media screen and (max-width: 576px) {
+            gap: 30px;
+        }
+
+        & > div {
+            text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: 1px;
+            text-align: center;
+
+            & > *:first-child {
+                font-weight: bold;
+                letter-spacing: 3px;
+                font-size: 2rem;
+                margin-bottom: 15px;
+            }
+            & > *:last-child {
+                font-size: 16px;
+                opacity: .7;
+            }
+        }
+    } 
+
+    &__social {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+
+        a{
+            display: inline-flex;
+            width: 55px;
+            height: 55px;
+            margin: 15px;
+            border-radius: 40%;
+            align-items: center;
+            justify-content: center;
+            color: beige;
+            position: relative;
+            flex-shrink: 0;
+            transition: all .2s;
+
+            @media screen and (max-width: 768px){
+                width: 50px;
+                height: 50px;
+                margin: 10px;
+            }
+
+            @media screen and (min-width: 768px) {
+                &:hover{
+                    transform: scale(1.3);
+                }
+            }
+
+            &.facebook{
+                background: linear-gradient(45deg, rgb(17, 152, 246), rgb(6, 117, 232));
+                box-shadow: 0 4px 30px rgba(88, 126, 177, 0.817);
+            }
+
+            &.linkedin{
+                background: linear-gradient(45deg, rgb(7, 93, 178), rgb(1, 158, 219));
+                box-shadow: 0 4px 30px rgba(102, 155, 225, 0.886);
+            }
+
+            &.gitlab{
+                background: linear-gradient(360deg, rgb(252, 163, 38), rgb(252, 109, 38), rgb(226, 67, 41));
+                box-shadow: 0 4px 30px rgba(226, 66, 41, 0.827);
+            }
+
+            &.discord{
+                background: linear-gradient(45deg, rgb(87, 96, 196), rgb(88, 101, 242) );
+                box-shadow: 0 4px 30px rgb(88, 101, 242);
+            }
+
+            &.github{
+                background: linear-gradient(45deg, rgb(37, 36, 36), rgb(0, 0, 0) );
+                box-shadow: 0 4px 30px rgb(0, 0, 0);
+            }
+
+        }
+    }
 }
+
